2020-02-01
- Remove external global vars
- Set verbose logging off by default in non daemon mode
- Fix make check

2020-01-31
- Remove old legacy records

2020-01-29
- Major code rearrangement in order to prepare for futur versions of nfdump
  Move extension definitions into extension files nfx.h
  Move exporter definition into extension.h
  nffile.h should only contain nffile data block handlich definitions

2020-01-26
- Fix compile error for FreeBSD #203
- Cleanup header code - add new filter.h - free nfdump.h from dust
- More code cleanup - delete nf_common - add output_fmt

2020-01-11
- Fix bug for IPv6 network cidr representation in raw and cvs output mode.

2019-12-05
- Remove unused old code. Fix for #197

2019-12-04
- Fix bidir export issues. Cleanup code. Fix for #195

2019-11-17
- Enable small time intervals < 60s. - #185
- Cleanup old code

2019-11-09
- Fix minor nfpcapd issues
- Fix gcc compile issue

2019-11-08
- Fix corrupt file handling #193

2019-11-03
- More code cleanup. Move code to dedicated files.

2019-10-28
- Restructure code for output into separate files.
- Cleanup old code.
- Fix bug #189 - valid json output
- Fix issue #190. Add compile time option for JunOS.

2019-09-01
- Cleanup configure.ac

2019-08-31
- Fix various c11 compile issues
- Cleanup old compat15 comments

2019-08-24
- Add vlan tags dot1qVlanId, 243, 254 - #182
- Fix sflow issue with Arista switches

2019-08-19
- Fix ft2nfdump next hop and ip router fields

2019-08-16
- Cleanup and fix IPv6 network display in war records.

2019-08-14
- Fix compile issues
- Fix output buffer size for lzo1x_decompress_safe()

2019-08-07
- Fix VerifyExtensionMap #179

2019-08-06
- Fix compile errors

2019-08-05
- Fix nfdump.1 man page. #175
- Fix off by 1 array. #173
- Fix use after free in ModifyCompressFile
- Add bound checks in AddExporterStat #174
- Add bound checks in AddSamplerInfo #176
- Add bound checks in AddExporterInfo
- Fix checks in InsertExtensionMap #177