@@ -85,7 +85,7 @@ static char data_string[STRINGSIZE];
 static char tag_string[2];
 
 /* prototypes */
-static inline void ICMP_Port_decode(master_record_t *r, char *string);
+static char *ICMP_Port_decode(master_record_t *r);
 
 static void InitFormatParser(void);
 
@@ -585,13 +585,13 @@ int	i, remaining;
 		} else {			// it's a static string
 			/* a static string goes up to next '%' or end of string */
 			char *p = strchr(c, '%');
-			char format[16];
+			char format[32];
 			if ( p ) {
 				// p points to next '%' token
 				*p = '\0';
 				AddString(strdup(c));
-				snprintf(format, 15, "%%%zus", strlen(c));
-				format[15] = '\0';
+				snprintf(format, 31, "%%%zus", strlen(c));
+				format[31] = '\0';
 				snprintf(h, STRINGSIZE-1-strlen(h), format, "");
 				h += strlen(h);
 				*p = '%';
@@ -599,8 +599,8 @@ int	i, remaining;
 			} else {
 				// static string up to end of format string
 				AddString(strdup(c));
-				snprintf(format, 15, "%%%zus", strlen(c));
-				format[15] = '\0';
+				snprintf(format, 31, "%%%zus", strlen(c));
+				format[31] = '\0';
 				snprintf(h, STRINGSIZE-1-strlen(h), format, "");
 				h += strlen(h);
 				*c = '\0';
@@ -613,14 +613,18 @@ int	i, remaining;
 
 } // End of ParseOutputFormat
 
-static inline void ICMP_Port_decode(master_record_t *r, char *string) {
+static char *ICMP_Port_decode(master_record_t *r) {
+#define ICMPSTRLEN 16
+static char icmp_string[ICMPSTRLEN];
 
 	if ( r->prot == IPPROTO_ICMP || r->prot == IPPROTO_ICMPV6 ) { // ICMP
-		snprintf(string, MAX_STRING_LENGTH-1, "%u.%u",  r->icmp_type, r->icmp_code);
+		snprintf(icmp_string, ICMPSTRLEN-1, "%u.%u",  r->icmp_type, r->icmp_code);
 	} else { 	// dst port
-		snprintf(string, MAX_STRING_LENGTH-1, "%u",  r->dstport);
+		snprintf(icmp_string, ICMPSTRLEN-1, "%u",  r->dstport);
 	}
-	string[MAX_STRING_LENGTH-1] = '\0';
+	icmp_string[ICMPSTRLEN-1] = '\0';
+
+	return icmp_string;
 
 } // End of ICMP_Port_decode
 
@@ -906,7 +910,6 @@ char tmp_str[IP_STRING_LEN];
 
 static void String_DstAddrPort(master_record_t *r, char *string) {
 char 	tmp_str[IP_STRING_LEN], portchar;
-char 	icmp_port[MAX_STRING_LENGTH];
 
 	tmp_str[0] = 0;
 	if ( (r->flags & FLAG_IPV6_ADDR ) != 0 ) { // IPv6
@@ -926,12 +929,11 @@ char 	icmp_port[MAX_STRING_LENGTH];
 		portchar = ':';
 	}
 	tmp_str[IP_STRING_LEN-1] = 0;
-	ICMP_Port_decode(r, icmp_port);
 
 	if ( long_v6 ) 
-		snprintf(string, MAX_STRING_LENGTH-1, "%s%39s%c%-5s", tag_string, tmp_str, portchar, icmp_port);
+		snprintf(string, MAX_STRING_LENGTH-1, "%s%39s%c%-5s", tag_string, tmp_str, portchar, ICMP_Port_decode(r));
 	else
-		snprintf(string, MAX_STRING_LENGTH-1, "%s%16s%c%-5s", tag_string, tmp_str, portchar, icmp_port);
+		snprintf(string, MAX_STRING_LENGTH-1, "%s%16s%c%-5s", tag_string, tmp_str, portchar, ICMP_Port_decode(r));
 
 	string[MAX_STRING_LENGTH-1] = 0;
 
@@ -1007,10 +1009,8 @@ static void String_SrcPort(master_record_t *r, char *string) {
 } // End of String_SrcPort
 
 static void String_DstPort(master_record_t *r, char *string) {
-char tmp[MAX_STRING_LENGTH];
 
-	ICMP_Port_decode(r, tmp);
-	snprintf(string, MAX_STRING_LENGTH-1 ,"%6s", tmp);
+	snprintf(string, MAX_STRING_LENGTH-1 ,"%6s", ICMP_Port_decode(r));
 	string[MAX_STRING_LENGTH-1] = '\0';
 
 } // End of String_DstPort
