@@ -73,7 +73,7 @@ extern char Ident[IDENTLEN];
 static profile_channel_info_t *profile_channels;
 static unsigned int num_channels;
 
-static inline int AppendString(char *stack, char *string, size_t	*buff_size);
+static int AppendString(char *stack, char *string, size_t	*buff_size);
 
 static void SetupProfileChannels(char *profile_datadir, char *profile_statdir, profile_param_info_t *profile_param, 
 	int subdir_index, char *filterfile, char *filename, int verify_only, int compress);
@@ -82,7 +82,7 @@ profile_channel_info_t	*GetChannelInfoList(void) {
 	return profile_channels;
 } // End of GetProfiles
 
-static inline int AppendString(char *stack, char *string, size_t *buff_size) {
+static int AppendString(char *stack, char *string, size_t *buff_size) {
 size_t len = strlen(string);
 
 	if ( *buff_size <= len ) {
@@ -90,7 +90,7 @@ size_t len = strlen(string);
 		return 0;
 	}
 
-	strncat(stack, string, len);
+	strncat(stack, string, *buff_size );
 	*buff_size -= len;
 
 	return 1;
@@ -210,7 +210,7 @@ nffile_t *nffile;
 		return;
 	}
 
-	strncpy(filter, source_filter, strlen(source_filter));
+	strncpy(filter, source_filter, strlen(filter));
 	p = filter + strlen(source_filter);
 
 	ret = read(ffd, (void *)p, stat_buf.st_size);
